DemoApp/SMDataTypes.h

enum  TDeliveryMode {Delivery_RR, Delivery_RR_Response, Delivery_Push};
typedef long int (__stdcall *TInitialize)();
TInitialize Initialize;
typedef long int (__stdcall *TSMClientConnect)(int index, char* host, long int port);
TSMClientConnect SMClientConnect;
typedef long int (__stdcall *TSMClientDisconnect)(int index);
TSMClientDisconnect SMClientDisconnect;
typedef bool (__stdcall *TSMClientIsConnected)(int index);
TSMClientIsConnected SMClientIsConnected;
typedef long int (__stdcall *TSMSetMessageParameters)(int index, TDeliveryMode DeliveryMode,
char* Destination, char* Msg);
TSMSetMessageParameters SMSetMessageParameters;
typedef long int (__stdcall *TSMSetMessageField)(int index, char* FieldName,
char* Data, int DataSize);
TSMSetMessageField SMSetMessageField;
typedef long int (__stdcall *TSMSendMessage)(int index);
TSMSendMessage SMSendMessage;
typedef char* (__stdcall *TSMGetClientUniqKey)(int index);
TSMGetClientUniqKey SMGetClientUniqKey;
typedef char* (__stdcall *TSMGetClientIP)(int index);
TSMGetClientIP SMGetClientIP;
typedef long int (__stdcall *TSMEventAddDestination)(int index, char* Dest, char* Msg);
TSMEventAddDestination SMEventAddDestination;
typedef long int (__stdcall *TSMEventRemoveDestination)(int index, char* Dest, char* Msg);
TSMEventRemoveDestination SMEventRemoveDestination;
typedef long int (__stdcall *TSMEventAllRemoveDestination)(int index);
TSMEventAllRemoveDestination SMEventAllRemoveDestination;
typedef long int (__stdcall *TSMGetReceivedCnt)(int index);
TSMGetReceivedCnt SMGetReceivedCnt;
typedef long int (__stdcall *TSMSetWorkEventCallBack)(int index, char* CallBackProc);
TSMSetWorkEventCallBack SMSetWorkEventCallBack;
typedef char* (__stdcall *TSMMessageGetBinaryFieldValue)(int index, char* FieldName);
TSMMessageGetBinaryFieldValue SMMessageGetBinaryFieldValue;
typedef long int (__stdcall *TSMGetObjectsNumber)();
TSMGetObjectsNumber SMGetObjectsNumber;
typedef long int (__stdcall *TSMGetMaximumObjectsNumber)();
TSMGetMaximumObjectsNumber SMGetMaximumObjectsNumber;
typedef long int (__stdcall *TSMCreateInstance)();
TSMCreateInstance SMCreateInstance;
// for MSVS aligning works via some another directive, I think like in the next line
// __declspec(align(1)) struct TFutExec
// we need to align at 1 bute because Delphi "packed record" directive means
//it's aligned to 1 byte

// TFutExec record size in Delphi equal 76
struct TFutExec
{
  //TFutExec = packed record
  char issue[8 + 1];
  //issue : array[0..8] of char;
  double gap;
  //gap : real;
  double cup;
  //cup : real;
  double sip;
  //sip : real;
  double hip;
  //hip : real;
  double lip;
  //lip : real;
  int vol;
  //vol : integer;
  double amt;
  //amt : real;
  int time;
  //time: integer;
  char side[1 + 1];
  //side: array[0..1] of char;
  char ydiffSign[1 + 1];
  //ydiffSign : array[0..1] of char;
  char chgrate[6 + 1];
  //chgrate   : array[0..6]  of char
  //end;
};